fix body width - no horizontal scroll

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,7 +62,7 @@
 
 body {
   width: 100%;
-  min-width: 100vw;
+  max-width: 100vw;
   background-color: white;
 }
 
